--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
+    "axios": "^1.7.4",
     "expo": "^51.0.29",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-gifted-charts": "^1.4.29",
     "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "3.31.1"
+    "react-native-screens": "3.31.1",
+    "rive-react-native": "^7.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
